--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,22 +1,25 @@
 {% load static %}
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head><script src="{% static 'js/color-modes.js' %}"></script>
+
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.122.0">
-    <title>Carousel Template · Bootstrap v5.3</title>
+    <title>Signin Template · Bootstrap v5.3</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
 
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -109,9 +112,11 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
+    <link href="{% static 'css/sign-in.css' %}" rel="stylesheet">
+
+
   </head>
-  <body>
+  <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="check2" viewBox="0 0 16 16">
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
@@ -164,44 +169,28 @@
     </div>
 
 
-<header data-bs-theme="dark">
-  {% include 'mailing/includes/inc_menu.html' %}
-</header>
-    <main>
-        {% block content %}
-        {% endblock %}
-  <!-- FOOTER -->
-  <footer class="pt-4 my-md-5 pt-md-5 border-top">
-        <div class="row">
-            <div class="col-12 col-md">
-                SkyStore
-                <small class="d-block mb-3 text-muted">&copy; 2024</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Категории</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Рассылки</a></li>
-                    <li><a class="text-muted" href="#">Телеграм боты</a></li>
-                    <li><a class="text-muted" href="#">Полезные утилиты</a></li>
-                    <li><a class="text-muted" href="#">Веб-приложения</a></li>
-                    <li><a class="text-muted" href="#">Микросервисы</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Дополнительно</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://sky.pro/">Сайт SkyPro</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>О нас</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="/contacts/">Контакты</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+<main class="form-signin w-100 m-auto mt-5" style="max-width: 400px;">
+
+  <form class="form-signin" method="post">
+    {% csrf_token %}
+    <div class="text-center mb-4">
+      <h1 class="h3 mb-3 font-weight-normal">Система рассылок</h1>
+      <p>Вход</p>
+    </div>
+    {{ form.non_field_errors }}
+    {{ form.as_p }}
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Запомни меня
+      </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Вход</button>
+    <button class="btn btn-lg btn-primary btn-block" type="button" onclick="window.location.href='{% url 'users:register' %}'">Регистрация</button>
+    <p class="mt-5 mb-3 text-muted text-center">&copy; 2024</p>
+  </form>
 </main>
+
+
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
     </body>
