--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -13,7 +13,7 @@
             <a class="nav-link active" aria-current="page" href="{% url 'blog:blog_list'%}">Блог</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Пока не знаю что</a>
+            <a class="nav-link" href="{% url 'mailing:client_list'%}">Список клиентов</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
